--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "author": "",
   "private": true,
   "license": "",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -40,6 +51,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
+    "cz-customizable": "^7.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.1.5",
@@ -56,6 +68,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
@@ -66,9 +79,13 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "chokidar-cli": "^3.0.0",
+    "commitizen": "^4.3.0",
+    "commitlint": "^17.6.1",
+    "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -108,7 +125,7 @@
       "^@app/proto(|/.*)$": "<rootDir>/_proto/$1",
       "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
-      "^@app/grpc-exceptions(|/.*)$": "<rootDir>/libs/grpc-exceptions/src/$1",
+      "^@app/grpc-to-http-exceptions(|/.*)$": "<rootDir>/libs/grpc-to-http-exceptions/src/$1",
       "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1"
     }
   }
