--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,20 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
+
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true,
+    "**/.factorypath": true
+  },
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/documentation": true,
+    "**/dist": true,
+    "**/bower_components": true,
+    "**/*.code-search": true
+  },
   "fileheader.customMade": {
     // 头部注释默认字段
     "Author": "hsycc",
@@ -17,8 +31,8 @@
     "return": ""
   },
   "fileheader.configObj": {
-    "autoAdd": false, // 检测文件没有头部注释，自动添加文件头部注释
-    "autoAddLine": 100, // 文件超过多少行数 不再自动添加头部注释
+    "autoAdd": true, // 检测文件没有头部注释，自动添加文件头部注释
+    "autoAddLine": 200, // 文件超过多少行数 不再自动添加头部注释
     "autoAlready": true, // 只添加插件支持的语言以及用户通过`language`选项自定义的注释
     "supportAutoLanguage": [], // 设置之后，在数组内的文件才支持自动添加
     // 自动添加头部注释黑名单
@@ -57,6 +71,7 @@
   "cSpell.words": [
     "ciphertext",
     "commitlint",
+    "compodoc",
     "davinci",
     "moderations",
     "nacos",
@@ -65,7 +80,7 @@
     "srcs",
     "tsup"
   ],
-  "[proto3]": {
-    "editor.defaultFormatter": "zxh404.vscode-proto3"
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
   }
 }
