--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
       "path": "./node_modules/cz-customizable"
     }
   },
+  "prisma": {
+    "seed-user": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
@@ -22,16 +25,20 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "clear": "rm -rf ./dist",
+    "clear": "rimraf ./dist/*",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "compodoc": "compodoc -p tsconfig.json -s",
     "docs:proto-gen": "./scripts/generate-proto-docs.sh",
+    "docker": "docker-compose up -d",
     "docker:build": "docker-compose build",
-    "docker:start": "docker-compose up --build",
-    "docker:teardown": "docker-compose down -v"
+    "docker:teardown": "docker-compose down -v",
+    "docker:db": "docker-compose -f docker-compose.db.yml up -d",
+    "docker:seed": "docker exec -it nest-api npm run seed",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.14",
@@ -45,9 +52,9 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
-    "@nestjs/typeorm": "^9.0.1",
+    "@prisma/client": "^4.12.0",
     "axios": "^1.3.6",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
@@ -59,18 +66,20 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nest-winston": "^1.9.1",
+    "nestjs-prisma": "^0.20.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.15",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.6.1",
+    "@compodoc/compodoc": "^1.1.19",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/js-yaml": "^4.0.5",
@@ -93,6 +102,7 @@
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "prisma": "^4.13.0",
+    "rimraf": "^5.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
