--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
       "path": "./node_modules/cz-customizable"
     }
   },
-  "prisma": {
-    "seed-user": "ts-node prisma/seed.ts"
-  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
@@ -37,8 +34,11 @@
     "docker:build": "docker-compose build",
     "docker:teardown": "docker-compose down -v",
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
-    "docker:seed": "docker exec -it nest-api npm run seed",
-    "seed": "prisma db seed"
+    "docker:seed:user": "docker exec -it user-svc pnpm run seed:user",
+    "docker:seed:gpt": "docker exec -it gpt-svc pnpm run seed:gpt",
+    "seed:user": "ts-node prisma/seed-user.ts",
+    "seed:gpt": "ts-node prisma/seed-gpt.ts",
+    "seed": "pnpm run seed:user & pnpm run seed:gpt"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.14",
@@ -52,7 +52,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.13.0",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -67,6 +67,7 @@
     "mysql": "^2.18.1",
     "nest-winston": "^1.9.1",
     "nestjs-prisma": "^0.20.0",
+    "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
