--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cz-customizable": "^7.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "google-protobuf": "^3.21.2",
     "helmet": "^6.1.5",
     "js-yaml": "^4.1.0",
     "moment": "^2.29.4",
@@ -71,6 +72,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "winston": "^3.8.2"
