chore: fix cz-customizable & add husky

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,11 +78,14 @@
   "commentTranslate.source": "Google",
   "commentTranslate.targetLanguage": "zh-CN",
   "cSpell.words": [
+    "breakline",
     "ciphertext",
     "clhcwl",
     "commitlint",
     "compodoc",
+    "conventionalcommits",
     "davinci",
+    "EDITMSG",
     "moderations",
     "nacos",
     "protoc",
