--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "commitlint": "^16.3.0",
+    "conventional-changelog": "^3.1.25",
     "crypto-js": "^4.1.1",
     "cz-customizable": "^7.0.0",
     "express": "^4.18.2",
@@ -77,6 +79,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.3",
     "@compodoc/compodoc": "^1.1.19",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
