--- a/libs/grpc/tsconfig.lib.json
+++ b/libs/grpc/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "../../dist/libs/grpc-to-http-exceptions"
+    "outDir": "../../dist/libs/grpc"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
