refactor: add libs/swagger

--- a/package.json
+++ b/package.json
@@ -144,7 +144,8 @@
       "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
       "^@app/grpc(|/.*)$": "<rootDir>/libs/grpc/src/$1",
-      "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1"
+      "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
+      "^@app/swagger(|/.*)$": "<rootDir>/libs/swagger/src/$1"
     }
   }
 }
