--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "editor.defaultFormatter": "Prisma.prisma"
   },
   "[proto3]": {
-    "editor.defaultFormatter": "xaver.clang-format"
+    // "editor.defaultFormatter": "xaver.clang-format"
   },
   "clang-format.language.javascript.enable": false,
   "clang-format.language.typescript.enable": false,
@@ -80,6 +80,7 @@
   "cSpell.words": [
     "breakline",
     "ciphertext",
+    "clhcsprq",
     "clhcwl",
     "commitlint",
     "compodoc",
@@ -91,6 +92,7 @@
     "protoc",
     "protos",
     "srcs",
-    "tsup"
+    "tsup",
+    "uawc"
   ]
 }
