--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
     "docker:seed:user": "docker exec -it user-svc pnpm run seed:user",
     "docker:seed:gpt": "docker exec -it gpt-svc pnpm run seed:gpt",
-    "seed:user": "ts-node prisma/seed-user.ts",
-    "seed:gpt": "ts-node prisma/seed-gpt.ts",
+    "seed:user": "ts-node prisma/scripts/seed-user.ts",
+    "seed:gpt": "ts-node prisma/scripts/seed-gpt.ts",
     "seed": "pnpm run seed:user & pnpm run seed:gpt"
   },
   "dependencies": {
@@ -50,7 +50,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "4.14.0",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -64,6 +64,7 @@
     "google-protobuf": "^3.21.2",
     "helmet": "^6.1.5",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nest-winston": "^1.9.1",
@@ -104,7 +105,7 @@
     "husky": "^8.0.3",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "rimraf": "^5.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
