--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,13 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@proto/*": ["_proto/*"],
+      "@prisma/*": ["prisma/*"],
       "@app/api-gateway": ["apps/api-gateway/src"],
       "@app/api-gateway/*": ["apps/api-gateway/src/*"],
       "@app/user-svc": ["apps/user-svc/src"],
       "@app/user-svc/*": ["apps/user-svc/src/*"],
       "@app/gpt-svc": ["apps/gpt-svc/src"],
       "@app/gpt-svc/*": ["apps/gpt-svc/src/*"],
-
       "@lib/common": ["libs/common/src"],
       "@lib/common/*": ["libs/common/src/*"],
       "@lib/config": ["libs/config/src"],
