docs: update docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,8 +89,10 @@
     "EDITMSG",
     "moderations",
     "nacos",
+    "openai",
     "protoc",
     "protos",
+    "skywalking",
     "srcs",
     "struct",
     "tsup",
