feat: 完成ak/sk鉴权设计及编码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,8 @@
   "commentTranslate.source": "Google",
   "commentTranslate.targetLanguage": "zh-CN",
   "cSpell.words": [
+    "ahudhuehua",
+    "bdqdn",
     "breakline",
     "ciphertext",
     "clhcsprq",
