dev: 完善ak/sk的鉴权编码 \& 完成openai chat completion的编码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
     "ahudhuehua",
     "bdqdn",
     "breakline",
+    "chatgpt",
     "ciphertext",
     "clhcsprq",
     "clhcwl",
@@ -88,6 +89,7 @@
     "compodoc",
     "conventionalcommits",
     "davinci",
+    "DDTHH",
     "EDITMSG",
     "moderations",
     "nacos",
