--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 ###
  # @Author: hsycc
  # @Date: 2023-05-11 04:49:55
- # @LastEditTime: 2023-05-11 04:51:24
+ # @LastEditTime: 2023-05-19 03:20:05
  # @Description: 
  # 
 ### 
+NODE_ENV = 'development'
+
 TZ = Asia/Shanghai
 
 # 端口号
@@ -18,40 +20,35 @@ SKIP-API-AUTH = false
 
 # oss config
 OSS_ACCESS_KEY_ID = 
-OSS_ACCESS_KEY_SECRET = 
+OSS_ACCESS_KEY_SECRET =
 
-OSS_BUCKET =
-OSS_REGION = 
+OSS_BUCKET = test-code-card
+OSS_REGION = oss-cn-hongkong
 
 # jwt 加盐
-JWT_ACCESS_SECRET=xWehrT4cBbPaFN&JwPCz
-JWT_REFRESH_SECRET=xWehrT4cBbPaFN&JwPCz
+JWT_ACCESS_SECRET =
+JWT_REFRESH_SECRET =
 
 # chatgpt
 GPT_API_KEY = 
 
 # POSTGRES
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-PG_DB_PORT=5432
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = postgres
+PG_DB_POR = 5432
 
-PG_DB_HOST=localhost # Nest run locally
+PG_DB_HOST = localhost # Nest run locally
 # PG_DB_HOST=postgres # Nest run in docker, change host to database container name
 #  host.docker.internal 
 
 # 微服务配置相关
 
-MICRO_DOMAIN_USER = 0.0.0.0
+MICRO_DOMAIN_USER = '0.0.0.0'
 MICRO_PORT_USER = 50051
 MICRO_PROTO_USER = _proto/user.proto
 PG_DATABASE_USER = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG_DB_HOST}:${PG_DB_PORT}/micro_user
 
-MICRO_DOMAIN_GPT = 0.0.0.0
-MICRO_PORT_GPT = 50052
-MICRO_PROTO_GPT = _proto/gpt.proto
-PG_DATABASE_GPT = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG_DB_HOST}:${PG_DB_PORT}/micro_gpt
-
-MICRO_DOMAIN_AI = 0.0.0.0
-MICRO_PORT_AI = 50053
+MICRO_DOMAIN_AI = '0.0.0.0'
+MICRO_PORT_AI = 50052
 MICRO_PROTO_AI = _proto/ai.proto
 PG_DATABASE_AI = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG_DB_HOST}:${PG_DB_PORT}/micro_ai
