--- a/package.json
+++ b/package.json
@@ -27,16 +27,25 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "compodoc": "compodoc -p tsconfig.json -s",
-    "docs:proto-gen": "./scripts/generate-proto-docs.sh",
+    "docs:proto-gen": "bash ./generate-proto-docs.sh",
     "docker": "docker-compose up -d",
     "docker:build": "docker-compose build",
     "docker:teardown": "docker-compose down -v",
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
     "docker:seed:user": "docker exec -it user-svc pnpm run seed:user",
-    "docker:seed:gpt": "docker exec -it gpt-svc pnpm run seed:gpt",
+    "docker:seed:ai": "docker exec -it ai-svc pnpm run seed:ai",
+    "seed": "pnpm run seed:user && pnpm run seed:ai",
     "seed:user": "ts-node prisma/scripts/seed-user.ts",
-    "seed:gpt": "ts-node prisma/scripts/seed-gpt.ts",
-    "seed": "pnpm run seed:user & pnpm run seed:gpt"
+    "seed:ai": "ts-node prisma/scripts/seed-ai.ts",
+    "prisma:generate": "prisma generate && pnpm run prisma:generate:user && pnpm run prisma:generate:ai",
+    "prisma:generate:user": "prisma generate --schema=prisma/user.prisma",
+    "prisma:generate:ai": "prisma generate --schema=prisma/ai.prisma",
+    "prisma:migrate": "pnpm run prisma:migrate:user && pnpm run prisma:migrate:ai",
+    "prisma:migrate:user": "prisma migrate dev -n ai  --schema=prisma/user.prisma",
+    "prisma:migrate:ai": "prisma migrate dev -n ai  --schema=prisma/ai.prisma",
+    "prisma:push": "pnpm run prisma:push:user && pnpm run prisma:push:ai",
+    "prisma:push:user": "prisma db push --schema=prisma/user.prisma",
+    "prisma:push:ai": "prisma db push --schema=prisma/ai.prisma"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.14",
@@ -51,22 +60,25 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@openapitools/openapi-generator-cli": "^2.6.0",
     "@prisma/client": "4.14.0",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
+    "camelcase": "^7.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "commitlint": "^16.3.0",
     "conventional-changelog": "^3.1.25",
     "crypto-js": "^4.1.1",
     "cz-customizable": "^7.0.0",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "form-data": "^4.0.0",
     "google-protobuf": "^3.21.2",
     "helmet": "^6.1.5",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nest-winston": "^1.9.1",
     "nestjs-prisma": "^0.20.0",
@@ -149,7 +161,8 @@
       "^@lib/config(|/.*)$": "<rootDir>/libs/config/src/$1",
       "^@lib/grpc(|/.*)$": "<rootDir>/libs/grpc/src/$1",
       "^@lib/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
-      "^@lib/swagger(|/.*)$": "<rootDir>/libs/swagger/src/$1"
+      "^@lib/swagger(|/.*)$": "<rootDir>/libs/swagger/src/$1",
+      "^@lib/open-ai(|/.*)$": "<rootDir>/libs/open-ai/src/$1"
     }
   }
 }
