dev: 对接openai speech to text api

--- a/package.json
+++ b/package.json
@@ -41,13 +41,17 @@
     "prisma:generate:user": "prisma generate --schema=prisma/user.prisma",
     "prisma:generate:ai": "prisma generate --schema=prisma/ai.prisma",
     "prisma:migrate": "pnpm run prisma:migrate:user && pnpm run prisma:migrate:ai",
-    "prisma:migrate:user": "prisma migrate dev -n ai  --schema=prisma/user.prisma",
+    "prisma:migrate:user": "prisma migrate dev -n user  --schema=prisma/user.prisma",
     "prisma:migrate:ai": "prisma migrate dev -n ai  --schema=prisma/ai.prisma",
+    "prisma:deploy": "pnpm run prisma:deploy:user && pnpm run prisma:deploy:ai",
+    "prisma:deploy:user": "prisma migrate deploy--schema=prisma/user.prisma",
+    "prisma:deploy:ai": "prisma migrate deploy --schema=prisma/ai.prisma",
     "prisma:push": "pnpm run prisma:push:user && pnpm run prisma:push:ai",
     "prisma:push:user": "prisma db push --schema=prisma/user.prisma",
     "prisma:push:ai": "prisma db push --schema=prisma/ai.prisma"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@grpc/grpc-js": "^1.8.14",
     "@grpc/proto-loader": "^0.7.6",
     "@nestjs/cli": "^9.4.0",
@@ -67,6 +71,7 @@
     "camelcase": "^7.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "commander": "^10.0.1",
     "commitlint": "^16.3.0",
     "conventional-changelog": "^3.1.25",
     "crypto-js": "^4.1.1",
@@ -74,6 +79,7 @@
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "google-protobuf": "^3.21.2",
     "helmet": "^6.1.5",
