--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,28 +79,35 @@
   "commentTranslate.targetLanguage": "zh-CN",
   "cSpell.words": [
     "ahudhuehua",
+    "APPNAME",
     "bdqdn",
     "breakline",
     "chatgpt",
     "ciphertext",
     "clhcsprq",
     "clhcwl",
+    "clhszs",
+    "clht",
     "commitlint",
     "compodoc",
     "conventionalcommits",
     "davinci",
+    "dbname",
     "DDTHH",
     "EDITMSG",
+    "healthcheck",
     "moderations",
     "mpga",
     "nacos",
     "openai",
+    "pdcpz",
     "protoc",
     "protos",
     "skywalking",
     "srcs",
     "struct",
     "tsup",
+    "ualegqse",
     "uawc"
   ]
 }
