--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@grpc/grpc-js": "^1.8.14",
     "@grpc/proto-loader": "^0.7.6",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/cli": "^9.4.0",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.1",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
@@ -64,6 +65,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@nestjs/terminus": "^9.2.2",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@prisma/client": "4.14.0",
     "axios": "^1.3.6",
@@ -73,6 +75,7 @@
     "class-validator": "^0.14.0",
     "commander": "^10.0.1",
     "commitlint": "^16.3.0",
+    "concurrently": "^8.0.1",
     "conventional-changelog": "^3.1.25",
     "crypto-js": "^4.1.1",
     "cz-customizable": "^7.0.0",
@@ -82,14 +85,19 @@
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "google-protobuf": "^3.21.2",
+    "grpc": "^1.24.11",
+    "health": "^0.3.0",
     "helmet": "^6.1.5",
+    "ip": "^1.1.8",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
+    "nacos": "^2.5.1",
     "nest-winston": "^1.9.1",
     "nestjs-prisma": "^0.20.0",
     "node-rsa": "^1.1.1",
     "openai": "^3.2.1",
+    "os": "^0.1.2",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
@@ -168,7 +176,8 @@
       "^@lib/grpc(|/.*)$": "<rootDir>/libs/grpc/src/$1",
       "^@lib/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^@lib/swagger(|/.*)$": "<rootDir>/libs/swagger/src/$1",
-      "^@lib/open-ai(|/.*)$": "<rootDir>/libs/open-ai/src/$1"
+      "^@lib/open-ai(|/.*)$": "<rootDir>/libs/open-ai/src/$1",
+      "^lib/nacos(|/.*)$": "<rootDir>/libs/nacos/src/$1"
     }
   }
 }
