dev: 健康检查 & docker-compose & prisma 异常捕获 & logger 中间件 & gprc 异常捕获 & gen-cli 命令行 & 链路追踪

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,14 @@
 .vscode/
+.husky/
 node_modules/
 npm-debug.log
 dist/
 graphql/
 test/
+documentation/
+logs/
+nacos/
+scripts/
+error.log
+combined.log
+
