--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV = 'development'
 
 TZ = Asia/Shanghai
 
-# nacos
+# nacos 相关暂时不用
 NACOS_ENABLE = true
 ## 配置nacos服务地址
 NACOS_SERVER_ADDR = 127.0.0.1:8848
@@ -18,6 +18,11 @@ NACOS_USERNAME = ''
 NACOS_PASSWORD = ''
 
 
+
+# OpenTelemetry
+
+OPENTELEMETRY_ENABLE = true
+OPENTELEMETRY_ZIPKIN_URL = http://localhost:9411/api/v2/spans
 
 
 # 网关服务 端口号
@@ -47,8 +52,7 @@ POSTGRES_PASSWORD = postgres
 
 PG_DB_PORT = 5432
 PG_DB_HOST = localhost
-# PG_DB_HOST = postgres # Nest run in docker, change host to database container name
-#  host.docker.internal
+
 
 
 
@@ -57,7 +61,7 @@ MICRO_SERVER_ADDR_USER = 127.0.0.1:50051
 MICRO_PORT_USER = 50051
 PG_DATABASE_USER = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG_DB_HOST}:${PG_DB_PORT}/micro_user
 
-## 指定网关连接 rpc 服务地址， 支持多个，用 ‘,’分隔， TODO: 生产环境替换成 docker 的桥接网络地址
+## 指定网关连接 rpc 服务地址， 支持多个，用 ‘,’分隔
 MICRO_SERVER_ADDR_AI = 127.0.0.1:50052
 MICRO_PORT_AI = 50052
 PG_DATABASE_AI = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG_DB_HOST}:${PG_DB_PORT}/micro_ai
