--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,63 @@
 version: '3.8'
+
 services:
   api-gateway:
-    container_name: ai-api-gateway
     build:
       context: .
       dockerfile: Dockerfile
-    # 覆盖容器启动后默认执行的命令, 支持 shell 格式和 [] 格式
+    image: ai-sass-app-image
     command: node ./dist/apps/api-gateway/main
     ports:
       - '9000:9000'
     networks:
-      - ai_app_net
-    depends_on:
-      # - postgres
-      - user-svc
+      - ai_saas_app_backend
     env_file:
       - .env
+      - .env.production
+    environment:
+      - NODE_ENV=production
+    labels:
+      - 'traefik.http.routers.blog.rule=Host(`traefik.io`) || (Host(`containo.us`) && Path(`/traefik`))'
 
   user-svc:
-    container_name: user-svc
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ai-sass-app-image
     ports:
       - '50051:50051'
     networks:
-      - ai_app_net
+      - ai_saas_app_backend
     env_file:
       - .env
-    # 覆盖容器启动后默认执行的命令, 支持 shell 格式和 [] 格式
+      - .env.production
+    environment:
+      - NODE_ENV=production
     command: node ./dist/apps/user-svc/main
+    healthcheck:
+      test: ['CMD', 'grpc_health_probe', '-addr=localhost:50051']
+      interval: 10s
+      timeout: 3s
+      retries: 3
+    labels:
+      - 'traefik.http.routers.blog.rule=Host(`traefik.io`) || (Host(`containo.us`) && Path(`/traefik`))'
+
   ai-svc:
-    container_name: ai-svc
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ai-sass-app-image
     ports:
       - '50052:50052'
     networks:
-      - ai_app_net
+      - ai_saas_app_backend
     env_file:
       - .env
-    # 覆盖容器启动后默认执行的命令, 支持 shell 格式和 [] 格式
+      - .env.production
+    environment:
+      - NODE_ENV=production
     command: node ./dist/apps/ai-svc/main
+    healthcheck:
+      test: ['CMD', 'grpc_health_probe', '-addr=localhost:50052']
+      interval: 10s
+      timeout: 3s
+      retries: 3
+    labels:
+      - 'traefik.http.routers.blog.rule=Host(`traefik.io`) || (Host(`containo.us`) && Path(`/traefik`))'
 
-    # volumes:
-    #   - ./monorepo/apps/user-svc:/app
-
-  # postgres:
-  #   image: postgres:13.5
-  #   container_name: postgres
-  #   restart: always
-  #   ports:
-  #     - '5432:5432'
-  #   networks:
-  #     - ai_app_net
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - postgres:/var/lib/postgresql/data
-
-# 指定需要使用的网络
 networks:
-  # 指定网络的名称，默认会创建bridge桥接网络
-  ai_app_net:
-
-# 指定数据卷
-volumes:
-  logs:
-  # postgres:
-  #   name: nest-db-ai
+  ai_saas_app_backend:
