--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "docker:build": "docker-compose build",
     "docker:teardown": "docker-compose down -v",
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
+    "docker:traefik": "docker-compose -f docker-compose.traefik.yml up -d",
     "docker:seed:user": "docker exec -it user-svc pnpm run seed:user",
     "docker:seed:ai": "docker exec -it ai-svc pnpm run seed:ai",
     "seed": "pnpm run seed:user && pnpm run seed:ai",
     "seed:user": "ts-node prisma/scripts/seed-user.ts",
     "seed:ai": "ts-node prisma/scripts/seed-ai.ts",
-    "prisma:generate": "prisma generate && pnpm run prisma:generate:user && pnpm run prisma:generate:ai",
+    "prisma:generate": "pnpm run prisma:generate:user && pnpm run prisma:generate:ai",
     "prisma:generate:user": "prisma generate --schema=prisma/user.prisma",
     "prisma:generate:ai": "prisma generate --schema=prisma/ai.prisma",
     "prisma:migrate": "pnpm run prisma:migrate:user && pnpm run prisma:migrate:ai",
@@ -53,59 +54,50 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@grpc/grpc-js": "^1.8.14",
-    "@grpc/proto-loader": "^0.7.6",
+    "@metinseylan/nestjs-opentelemetry": "^3.0.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/cli": "^9.4.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
-    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/terminus": "^9.2.2",
-    "@openapitools/openapi-generator-cli": "^2.6.0",
-    "@prisma/client": "4.14.0",
-    "axios": "^1.3.6",
-    "bcrypt": "^5.1.0",
-    "camelcase": "^7.0.1",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/exporter-zipkin": "^1.13.0",
+    "@opentelemetry/sdk-trace-base": "^1.13.0",
+    "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.12",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "commander": "^10.0.1",
-    "commitlint": "^16.3.0",
-    "concurrently": "^8.0.1",
-    "conventional-changelog": "^3.1.25",
     "crypto-js": "^4.1.1",
-    "cz-customizable": "^7.0.0",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "google-protobuf": "^3.21.2",
-    "grpc": "^1.24.11",
-    "health": "^0.3.0",
     "helmet": "^6.1.5",
     "ip": "^1.1.8",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
-    "mysql": "^2.18.1",
+    "multer": "1.4.5-lts.1",
     "nacos": "^2.5.1",
     "nest-winston": "^1.9.1",
+    "nestjs-cls": "^3.4.0",
     "nestjs-prisma": "^0.20.0",
-    "node-rsa": "^1.1.1",
     "openai": "^3.2.1",
-    "os": "^0.1.2",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
+    "prisma": "^4.15.0",
     "protobufjs": "^7.2.3",
-    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "ts-loader": "^9.4.3",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -113,33 +105,31 @@
     "@compodoc/compodoc": "^1.1.19",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "29.2.4",
-    "@types/js-yaml": "^4.0.5",
-    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
-    "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "chokidar-cli": "^3.0.0",
+    "commander": "^10.0.1",
     "commitizen": "^4.3.0",
+    "commitlint": "^16.3.0",
+    "concurrently": "^8.0.1",
+    "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
+    "cz-customizable": "^7.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "google-protobuf": "^3.21.2",
     "husky": "^8.0.3",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.14.0",
     "rimraf": "^5.0.0",
-    "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
-    "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "ts-proto": "^1.146.0",
     "tsconfig-paths": "4.1.1",
